modified:color,minor issues

--- a/Assignment.html
+++ b/Assignment.html
@@ -8,7 +8,7 @@
     <title>Assignment</title>
 </head>
 <body>
-    <marquee style="color: white;">To create a center for imparting technical education of international standards.</marquee>
+    <marquee style="color:red;">To create a center for imparting technical education of international standards.</marquee>
     <marquee direction="right" 
         behavior="alternate" 
         style="border:BLACK 2px SOLID">
@@ -18,7 +18,7 @@
     
     <h1 style="text-align: center; font-size:70px; "><b><u><a href="https://btirt.ac.in" style="color:White; letter-spacing:15px; " title="BTIRT-Babulal Tarabai Institute of Research Technology">B   T   I   R   T</u> </a> </b></h1>
 
-    <h1 style="text-align: center; color:white; font-size:25px; margin-top:-3%;">Babulal Tarabai Institute of Research Technology</h1>
+    <h1 style="text-align: center; color:black; font-size:25px; margin-top:-3%;">Babulal Tarabai Institute of Research Technology</h1>
 
 
 
@@ -37,7 +37,7 @@
             <h2 style="text-align: center; color:white;"> BTIRT Global Outlook</h2>
         </div>
          <br>
-         <hr width="800"  >
+
          <div id="trans">
          <h1 style="text-align:center; color: bisque; letter-spacing:10px; padding-top:10px;"><u>COURSES</u> </h1>
          </div>
@@ -106,6 +106,7 @@
     <h1 style="text-align:center ; color:aqua;">Nursing</h1>
 
     <p style="color:white;">BSc Nursing (Bachelor of Science in Nursing) is a 4 year undergraduate course dealing with the development of skills, training, values and knowledge related to critical care. Students with science in class 12 are eligible for BSc Nursing. There are 1,00,930 BSc Nursing course seats in 1936 nursing colleges in India. There are 571 BSc Nursing seats in AIIMS.
+        Nurses' roles range from direct patient care and case management to establishing nursing practice standards.
 
         BSc Nursing Admission is based on the NEET UG exam for most of the central and state universities followed by a counseling round; however, some universities like AIIMS conduct their own entrance exams for admission to BSc nursing course. </p>
     </div>
